[gd_scene load_steps=29 format=2]

[ext_resource path="res://UI/Crafting/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Crafting/Crafting.gd" type="Script" id=2]
[ext_resource path="res://UI/Status Counter Font mini.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Crafting/Button.png" type="Texture" id=4]
[ext_resource path="res://UI/Crafting/Sword Window.png" type="Texture" id=5]
[ext_resource path="res://UI/Status Counter Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/Attack Value.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/Crafting Infos.tres" type="DynamicFont" id=8]
[ext_resource path="res://UI/Crafting/Blocked.png" type="Texture" id=9]
[ext_resource path="res://UI/Control Key Overlay_Zeichenfl√§che 1.png" type="Texture" id=10]
[ext_resource path="res://UI/feedbin.png" type="Texture" id=11]
[ext_resource path="res://UI/Crafting/feedbin.gd" type="Script" id=12]
[ext_resource path="res://UI/Crafting/Empty.png" type="Texture" id=13]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 6 )

[sub_resource type="Theme" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Step1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Step1/Slot:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.921569, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Step1/Slot2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.921569, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Step1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Step2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Step3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Step2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Step2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Step2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.921569, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Step1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Step3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Step2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Step3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Step3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.921569, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Step1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "fin"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Step1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Step2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Step3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Step1"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Step2"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Step3"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "fin"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Step1/node = SubResource( 5 )
states/Step1/position = Vector2( 126.5, -34.1669 )
states/Step2/node = SubResource( 14 )
states/Step2/position = Vector2( 303.5, -33.0838 )
states/Step3/node = SubResource( 6 )
states/Step3/position = Vector2( 477, -33.6254 )
states/fin/node = SubResource( 11 )
states/fin/position = Vector2( 644, -34.3335 )
transitions = [ "Step3", "fin", SubResource( 12 ), "Step1", "Step2", SubResource( 15 ), "Step2", "Step3", SubResource( 16 ) ]
start_node = "Step1"
end_node = "fin"
graph_offset = Vector2( 0, -126.084 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="Crafting" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crafting" type="Node2D" parent="."]

[node name="Sword Window" type="Sprite" parent="Crafting"]
position = Vector2( 470, 540 )
texture = ExtResource( 5 )

[node name="Weapon" type="VBoxContainer" parent="Crafting"]
margin_left = 341.0
margin_right = 461.0
margin_bottom = 990.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" parent="Crafting/Weapon" instance=ExtResource( 1 )]
margin_top = 37.0
margin_bottom = 217.0

[node name="Blocked" type="Sprite" parent="Crafting/Weapon/Slot"]
position = Vector2( 58.0276, 88.7654 )
texture = ExtResource( 9 )

[node name="Slot2" parent="Crafting/Weapon" instance=ExtResource( 1 )]
margin_top = 221.0
margin_bottom = 401.0

[node name="Blocked" type="Sprite" parent="Crafting/Weapon/Slot2"]
position = Vector2( 60.052, 90.3559 )
texture = ExtResource( 9 )

[node name="Slot3" parent="Crafting/Weapon" instance=ExtResource( 1 )]
margin_top = 405.0
margin_bottom = 585.0

[node name="Blocked" type="Sprite" parent="Crafting/Weapon/Slot3"]
position = Vector2( 60.4834, 90.1779 )
texture = ExtResource( 9 )

[node name="Slot4" parent="Crafting/Weapon" instance=ExtResource( 1 )]
margin_top = 589.0
margin_bottom = 769.0

[node name="Blocked" type="Sprite" parent="Crafting/Weapon/Slot4"]
position = Vector2( 62.641, 93.452 )
texture = ExtResource( 9 )

[node name="Slot5" parent="Crafting/Weapon" instance=ExtResource( 1 )]
margin_top = 773.0
margin_bottom = 953.0

[node name="Blocked" type="Sprite" parent="Crafting/Weapon/Slot5"]
position = Vector2( 62.2461, 91.5777 )
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="Crafting"]
margin_left = 339.473
margin_top = 1001.91
margin_right = 551.473
margin_bottom = 1067.91
rect_pivot_offset = Vector2( 364.942, -438.057 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Label" parent="Crafting"]
self_modulate = Color( 0.611765, 0.909804, 0.537255, 1 )
margin_left = 533.0
margin_top = 44.9025
margin_right = 620.0
margin_bottom = 87.9025
custom_fonts/font = ExtResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attackspeed" type="Label" parent="Crafting"]
margin_left = 533.0
margin_top = 137.381
margin_right = 630.156
margin_bottom = 165.381
custom_fonts/font = ExtResource( 8 )
text = "Quick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Special Attack" type="Label" parent="Crafting"]
margin_left = 533.0
margin_top = 205.621
margin_right = 621.218
margin_bottom = 238.621
custom_fonts/font = ExtResource( 8 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="Crafting"]
margin_left = 338.438
margin_top = 961.887
margin_right = 577.438
margin_bottom = 1002.89
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.843137, 0, 0, 1 )
text = "You need 1 tip."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckItem" type="Timer" parent="."]
autostart = true

[node name="Inventory" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Inventory"]
margin_left = -20.0
margin_top = -23.4321
margin_right = 330.0
margin_bottom = 1342.57
color = Color( 0.388235, 0.298039, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="ScrollContainer" parent="Inventory"]
margin_left = 20.0
margin_top = 13.0
margin_right = 314.0
margin_bottom = 1061.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Inventory/Inventory"]
margin_right = 240.0
margin_bottom = 1440.0
theme = SubResource( 2 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="Slot" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]

[node name="Slot2" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_right = 240.0

[node name="Slot3" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 180.0
margin_bottom = 360.0

[node name="Slot4" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 180.0
margin_right = 240.0
margin_bottom = 360.0

[node name="Slot5" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 360.0
margin_bottom = 540.0

[node name="Slot6" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 360.0
margin_right = 240.0
margin_bottom = 540.0

[node name="Slot7" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 540.0
margin_bottom = 720.0

[node name="Slot8" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 540.0
margin_right = 240.0
margin_bottom = 720.0

[node name="Slot9" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 720.0
margin_bottom = 900.0

[node name="Slot10" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 720.0
margin_right = 240.0
margin_bottom = 900.0

[node name="Slot11" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 900.0
margin_bottom = 1080.0

[node name="Slot12" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 900.0
margin_right = 240.0
margin_bottom = 1080.0

[node name="Slot13" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 1080.0
margin_bottom = 1260.0

[node name="Slot14" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 1080.0
margin_right = 240.0
margin_bottom = 1260.0

[node name="Slot15" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_top = 1260.0
margin_bottom = 1440.0

[node name="Slot16" parent="Inventory/Inventory/GridContainer" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = 1260.0
margin_right = 240.0
margin_bottom = 1440.0

[node name="feedbin" type="TextureRect" parent="Inventory"]
margin_left = 1533.42
margin_top = 575.244
margin_right = 1933.42
margin_bottom = 1075.24
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="Control Key Overlay_Zeichenfl√§che 1" type="Sprite" parent="."]
position = Vector2( 1122.75, 814.164 )
texture = ExtResource( 10 )

[node name="Tut1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step1" type="Control" parent="Tut1"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="TextureRect" parent="Tut1/Step1"]
margin_left = 20.3345
margin_top = 12.9108
margin_right = 140.334
margin_bottom = 192.911
rect_min_size = Vector2( 120, 180 )
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="TextureRect" parent="Tut1/Step1"]
margin_left = 341.05
margin_top = 772.796
margin_right = 461.05
margin_bottom = 952.796
rect_min_size = Vector2( 120, 180 )
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step2" type="Control" parent="Tut1"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="TextureRect" parent="Tut1/Step2"]
self_modulate = Color( 0.923766, 0.0280106, 1, 1 )
margin_left = 139.83
margin_top = 12.5541
margin_right = 259.83
margin_bottom = 192.554
rect_min_size = Vector2( 120, 180 )
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="TextureRect" parent="Tut1/Step2"]
self_modulate = Color( 0.923766, 0.0280106, 1, 1 )
margin_left = 340.696
margin_top = 588.713
margin_right = 460.696
margin_bottom = 768.713
rect_min_size = Vector2( 120, 180 )
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step3" type="Control" parent="Tut1"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftBtn" type="TextureRect" parent="Tut1/Step3"]
margin_left = 322.647
margin_top = 1069.58
margin_right = 393.647
margin_bottom = 1313.58
rect_rotation = -89.9999
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tut1"]
autoplay = "Step1"
anims/Step1 = SubResource( 3 )
anims/Step2 = SubResource( 13 )
anims/Step3 = SubResource( 4 )
anims/fin = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="Tut1"]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 9 )
[connection signal="about_to_show" from="." to="." method="_on_Crafting_about_to_show"]
[connection signal="changed" from="Crafting/Weapon/Slot4" to="." method="_on_Slot4_changed"]
[connection signal="changed" from="Crafting/Weapon/Slot5" to="." method="_on_Slot5_changed"]
[connection signal="pressed" from="Crafting/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="CheckItem" to="." method="_on_CheckItem_timeout"]
